# tempo-term

./: .gitignore  CHANGELOG-NEXT.md  README.md  README.zh-Hans.md  README.zh-Hant.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
public/: splash.css
scripts/: buildManifest.mjs  buildManifest.test.ts  claudeProgress.ts  patchManifestNotes.mjs  release.sh  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: clipboard.rs  menu.rs  mod.rs  preview.rs
src-tauri/src/modules/ai/: mod.rs  provider.rs
src-tauri/src/modules/claude_progress/: mod.rs
src-tauri/src/modules/claude_status_hook/: mod.rs  status-hook.sh
src-tauri/src/modules/codex_progress/: mod.rs
src-tauri/src/modules/codex_status_hook/: mod.rs
src-tauri/src/modules/editor_watch/: mod.rs
src-tauri/src/modules/fonts/: detect.rs  mod.rs
src-tauri/src/modules/fs/: mod.rs  ops.rs
src-tauri/src/modules/git/: mod.rs
src-tauri/src/modules/notes/: mod.rs
src-tauri/src/modules/pr/: mod.rs
src-tauri/src/modules/pty/: mod.rs  session.rs  shell.rs
src-tauri/src/modules/secrets/: file_store.rs  mod.rs
src-tauri/src/modules/session_log/: mod.rs
src-tauri/src/modules/sessions_index/: antigravity.rs  claude.rs  codex.rs  index.rs  mod.rs  proto.rs  scanner.rs  stats.rs  sync.rs  types.rs  watch.rs
src-tauri/src/modules/setup/: mod.rs
src-tauri/src/modules/ssh/: client.rs  mod.rs  session.rs
src-tauri/src/modules/status_ipc/: mod.rs
src-tauri/src/modules/terminal_history/: mod.rs
(+367 files in other folders)
